[package]
name = "http-client-hyper"
version = "0.1.0"
authors = ["Laurent T. Fourrier <laurent@ltfourrier.net>"]
edition = "2024"

[features]
default = []
json = ["http-client/json", "dep:serde", "dep:serde_json"]
rustls = ["dep:hyper-rustls", "dep:rustls"]

[dependencies]
http-client = { path = "../http-client" }
hyper = { version = "1", features = ["client", "http1", "http2"] }
hyper-util = { version = "0.1", features = ["client", "client-legacy", "tokio", "http1", "http2"] }
http-body-util = "0.1"
bytes = "1"
tokio = { version = "1", features = ["rt", "net", "macros", "rt-multi-thread"] }
url = "2"

# Optional TLS
hyper-rustls = { version = "0.27", optional = true, default-features = false, features = ["http1", "http2", "native-tokio", "tls12", "ring"] }
rustls = { version = "0.23", optional = true, default-features = false, features = ["ring", "std", "tls12"] }

# Optional JSON
serde = { version = "1", optional = true }
serde_json = { version = "1", optional = true }

[dev-dependencies]
testcontainers = { version = "0.23", features = ["http_wait"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
